--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RadioTakt</string>
+    <string name="app_name">РадіоТАКТ</string>
     <string name="currentSongHeader">Зараз в ефірі:</string>
     <string name="lastSongsHeader">Раніше в ефірі були:</string>
 </resources>
